feat: Optimize terrain raster loading and reuse
  - add tile-based GeoTIFF raster access with lightweight raster caching
  - release terrain raster data outside active tile blocks to control memory usage
  - reuse existing standardized/resized rasters when resize preprocessing is skipped
  - avoid unnecessary raster copies while checking all-noData GeoTIFF outputs
  - replace string tile cache keys with compact long keys
  - reduce allocation in triangle refinement and raster triangle calculations
  - update prerelease scenarios for temp raster reuse